<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Southampton University Organiser</string>
    <string name="preferencesUniversityCredentialsCatagory">University Credentials</string>
    <string name="preferencesUniversityUsernameDialogTitle">Username</string>
    <string name="preferencesUniversityPasswordDialogTitle">Password</string>
    <string name="preferencesUniversityEmailCatagory">University Email</string>
    <string name="preferencesUniversityCalenderCatagory">University Calender</string>
    <string name="preferencesUniversityContactsCatagory">University Contacts</string>
    <string name="organiserMenuPreferences">Preferences</string>
    <string name="preferencesActivityLabel">Preferences</string>
    <string name="login_activity_username_label">Preferences</string>
    <string name="login_activity_password_label">Preferences</string>
    <string name="login_activity_ok_button">Preferences</string>
    <string name="label">Preferences</string>
    <string name="ui_activity_authenticating">Preferences</string>
    <string name="login_activity_loginfail_text_both">Preferences</string>
    <string name="login_activity_loginfail_text_pwonly">Preferences</string>
    <string name="login_activity_newaccount_text">Preferences</string>
    <string name="login_activity_loginfail_text_pwmissing">Preferences</string>

</resources>